--- a/reservasi/templates/add_complaint.html
+++ b/reservasi/templates/add_complaint.html
@@ -17,6 +17,7 @@
     </style>
 {% endblock meta %}
 {% block content %}
+    {% include "nav-customer.html" %}
     <div class="container">
         <h2 class="text-center my-4">KOMPLAIN</h2>
         <div class="row justify-content-center">
@@ -51,4 +52,5 @@
             </div>
         </div>
     </div>
+    <div style="margin-top: 10px;"></div>
 {% endblock content %}
