--- a/reservasi/templates/add_review.html
+++ b/reservasi/templates/add_review.html
@@ -17,6 +17,7 @@
     </style>
 {% endblock meta %}
 {% block content %}
+    {% include "nav-customer.html" %}
     <div class="container">
         <h2 class="text-center my-4">REVIEW</h2>
         <div class="row justify-content-center">
