--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
     </head>
 
-    <body style="background:antiquewhite;">
+    <body style="background:#d9edf7">
         
         {% block content %}
         {% endblock content %}
