build CRUD fasilitas hotel

--- a/hotel/templates/fasilitas.html
+++ b/hotel/templates/fasilitas.html
@@ -10,7 +10,7 @@
         <h2 class="text-center my-4">FASILITAS HOTEL</h2>
         <div class="row justify-content-center">
             <div class="col-md-5  text-center">
-                <a class="btn btn-primary" href="fasilitas/create" role="button">+ TAMBAH FASILITAS</a>
+                <a class="btn btn-primary" href="create" role="button">+ TAMBAH FASILITAS</a>
             </div>
             <div class="col-md-10 mt-4">
                 <table class="table">
@@ -22,21 +22,16 @@
                         </tr>
                       </thead>
                     <tbody>
+                        {% for res in response %}
                         <tr>
-                        <td>1</td>
-                        <td>Wifi</td>
-                        <td><a class="btn btn-primary" href="fasilitas/update" role="button">UPDATE</a><br>
-                            <a class="btn btn-danger mt-1" href="#" role="button">HAPUS</a>
-                        </td>
-                        </tr>
-
-                        <tr>
-                            <td>2</td>
-                            <td>Laundry</td>
-                            <td><a class="btn btn-primary" href="fasilitas/update" role="button">UPDATE</a><br>
-                                <a class="btn btn-danger mt-1" href="#" role="button">HAPUS</a>
+                            <td>{{forloop.counter}}</td>
+                            <td>{{res.facility_name}}</td>
+                            <td><a class="btn btn-primary" href="{{res.facility_name}}" role="button">UPDATE</a><br>
+                                <a class="btn btn-danger mt-1" href="{{res.facility_name}}/delete" role="button">HAPUS</a>
                             </td>
                             </tr>
+                        {% endfor %}
+                    
 
 
                     </tbody>
