--- a/hotel/templates/update_fasilitas.html
+++ b/hotel/templates/update_fasilitas.html
@@ -11,13 +11,16 @@
         <div class="row justify-content-center">
             <div class="col-md-10">
                 <div class="reservation-panel">
-                    <form id="search-form">
+                    <form id="search-form" action="" method="POST">
+                        {% csrf_token %}
                         <div class="form-group">
+                            <label for="minimum">Nama Sebelum: {{ facility }} </label>
+                            <br>
                             <label for="minimum">Nama Fasilitas: </label>
-                            <input type="text" class="form-control" id="minimum">
+                            <input type="text" class="form-control" id="facility_name" name="facility_name">
                         </div>
                         <div class="form-group text-center">
-                            <button type="submit" class="btn btn-primary">TAMBAH</button>
+                            <button type="submit" class="btn btn-primary">UPDATE</button>
                         </div>
                     </form>
                 </div>
