--- a/hotel/templates/update_fasilitas.html
+++ b/hotel/templates/update_fasilitas.html
@@ -17,7 +17,7 @@
                             <input type="text" class="form-control" id="minimum">
                         </div>
                         <div class="form-group text-center">
-                            <button type="submit" class="btn btn-primary">TAMBAH</button>
+                            <button type="submit" class="btn btn-primary">UPDATE</button>
                         </div>
                     </form>
                 </div>
