--- a/reservasi/templates/add_shuttle.html
+++ b/reservasi/templates/add_shuttle.html
@@ -23,27 +23,40 @@
         <div class="row justify-content-center">
             <div class="col-md-6">
                 <div class="reservation-panel">
-                    <form>
+                    <form id="reservationForm" onsubmit="return false">
+                        {% csrf_token %}
                         <div class="form-group">
                             <label for="reservationID">ID Reservasi:</label>
                             <input type="text" class="form-control" id="reservationID" value="4235" disabled>
                         </div>
                         <div class="form-group">
                             <label for="vehicle">Kendaraan:</label>
-                            <select class="form-control" id="vehicle">
-                                <option value="Honda Brio">Honda Brio</option>
-                                <option value="Toyota Raize">Toyota Raize</option>
-                                <option value="Daihatsu Rocky">Daihatsu Rocky</option>
-                                <option value="Daihatsu Terios">Daihatsu Terios</option>
-                                <option value="BMW M3">BMW M3</option>
+                            <select class="form-control" id="vehicle" name="vehicle">
+                                {% for x in kendaraan %}
+                                <option value="{{x}}">{{x}}</option>
+                                {% endfor %}
                             </select>
                         </div>
                         <div class="form-group text-center">
-                            <button type="submit" class="btn btn-primary">Submit</button>
+                            <button id="btn-submit" type="submit" class="btn btn-primary">Submit</button>
                         </div>
                     </form>
                 </div>
             </div>
         </div>
     </div>
+    <script>
+        function addShuttle() {
+            var form = this.form
+            alert(form.elements['vehicle'].value)
+            fetch("{% url 'reservasi:reservation_submit' %}", {
+                method: "POST",
+                body: new FormData(this.form)
+            }).then(refreshProducts)
+
+            document.getElementById("form").reset()
+            return false
+        }
+        document.getElementById("btn-submit").onclick = addShuttle
+    </script>
 {% endblock content %}
