--- a/login/templates/landingpage.html
+++ b/login/templates/landingpage.html
@@ -52,6 +52,7 @@
         .button:hover {
             background-color: #1878b8;
         }
+
     </style>
 </head>
 
@@ -60,8 +61,8 @@
         <h1>Welcome to Sistel</h1>
         <p>Choose an option:</p>
         <div class="button-container">
-            <a href="login.html" class="button">Login</a>
-            <a href="register.html" class="button">Register</a>
+            <a href="/login/" class="button">Login</a>
+            <a href="/register/" class="button">Register</a>
         </div>
     </div>
 </body>
