--- a/login/templates/landingpage.html
+++ b/login/templates/landingpage.html
@@ -62,7 +62,7 @@
         <p>Choose an option:</p>
         <div class="button-container">
             <a href="/login/" class="button">Login</a>
-            <a href="/register/" class="button">Register</a>
+            <a href="/register/" class="button" style="">Register</a>
         </div>
     </div>
 </body>
