--- a/templates/nav-customer.html
+++ b/templates/nav-customer.html
@@ -40,7 +40,7 @@ li a:hover:not(.active) {
   <li><a href="#dashboard">Dashboard</a></li>
   <li><a href="#reservasi">Reservasi</a></li>
   <li><a href="#pesankamar">Pesan Kamar</a></li>
-  <li style="float:right"><a class="active" href="#about">Logout</a></li>
+  <li style="float:right"><a class="active" href="{% url 'login:logout' %}">Logout</a></li>
 </ul>
 
 </body>
