--- a/templates/nav-hotel.html
+++ b/templates/nav-hotel.html
@@ -41,7 +41,7 @@ li a:hover:not(.active) {
   <li><a href="#kamar">Kamar</a></li>
   <li><a href="#fasillitas">Fasilitas</a></li>
   <li><a href="#reservasiList">List Reservasi</a></li>
-  <li style="float:right"><a class="active" href="#about">Logout</a></li>
+  <li style="float:right"><a class="active" href="{% url 'login:logout' %}">Logout</a></li>
 </ul>
 
 </body>
