finish all triggers

--- a/hotel/templates/update_fasilitas.html
+++ b/hotel/templates/update_fasilitas.html
@@ -42,7 +42,7 @@
         </div>
     </div>
     <div style="margin-top: 10px;"></div>
-
+<!-- 
     <script>
         $(document).ready(function() {
             $('#search-form').submit(function(e) {
@@ -57,6 +57,6 @@
                 // If names are different, the form will submit normally
             });
         });
-        </script>
+        </script> -->
     
 {% endblock content %}
