--- a/Han/templates/create_kamar.html
+++ b/Han/templates/create_kamar.html
@@ -5,6 +5,7 @@
     </style>
 {% endblock meta %}
 {% block content %}
+{% include 'nav-customer.html'%}
 <div class="mainpnl centered container w-75 align-middle">
     <table class="table table-sm">
         <h2>KAMAR</h2>
