--- a/Han/templates/daftar_kamar.html
+++ b/Han/templates/daftar_kamar.html
@@ -5,6 +5,7 @@
     </style>
 {% endblock meta %}
 {% block content %}
+{% include 'nav-hotel.html'%}
     <h1>Kamar Hotel</h1>
     <button>Tambah Kamar</button>
     <h1>Daftar Kamar Hotel</h1>
