--- a/templates/nav-customer.html
+++ b/templates/nav-customer.html
@@ -38,8 +38,8 @@ li a:hover:not(.active) {
 
 <ul>
   <li><a href="/dashboard/">Dashboard</a></li>
-  <li><a href="#reservasi">Reservasi</a></li>
-  <li><a href="#pesankamar">Pesan Kamar</a></li>
+  <li><a href="/Han/daftar_reservasi">Reservasi</a></li>
+  <li><a href="/Han/create_kamar">Pesan Kamar</a></li>
   <li style="float:right"><a class="active" href="{% url 'login:logout' %}">Logout</a></li>
 </ul>
 
