--- a/reservasi/templates/add_complaint.html
+++ b/reservasi/templates/add_complaint.html
@@ -68,8 +68,7 @@
                 } else {
                     alert("Kamu berhasil mengajukan komplain!")
                     this.form.reset()
-                    // TODO: window.location.href =
-                    location.reload()
+                    window.location.href = '/dashboard'
                 }
             })
             return false
