--- a/reservasi/templates/add_review.html
+++ b/reservasi/templates/add_review.html
@@ -64,7 +64,7 @@
                 } else {
                     alert("Kamu berhasil membuat review!")
                     this.form.reset()
-                    // TODO: window.location.href =
+                    window.location.href = '/dashboard'
                     location.reload()
                 }
             })
