--- a/reservasi/templates/add_shuttle.html
+++ b/reservasi/templates/add_shuttle.html
@@ -59,8 +59,7 @@
                 } else {
                     alert("Kamu berhasil memesan shuttle service!")
                     this.form.reset()
-                    // TODO: window.location.href =
-                    window.location.reload()
+                    window.location.href = '/dashboard'
                 }
             })
             return false
